fix: nav and content alignment

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -97,6 +97,10 @@ img{
   background-color: var(--ifm-hover-overlay);
 }
 
+.footer{
+  padding: 32px 60px;
+}
+
 .footer--dark{
   --ifm-footer-background-color:#152748;
 }
@@ -119,7 +123,7 @@ img{
 }
 
 .navbar__inner{
-  @apply max-w-[1920px] 
+  @apply max-w-[1920px] px-[60px]
 }
 
 .plugin-pages.plugin-id-default:not(.docs-wrapper):not(.blog-wrapper) .navbar--fixed-top{
@@ -143,6 +147,7 @@ img{
   --ifm-color-primary-lightest: rgba(179, 199, 238, 0);
   --ifm-color-primary-font:#152748;
   --ifm-code-font-size: 95%;
+  --ifm-container-width-xl: 1920px;
   --ifm-hover-overlay:#F6F9FF;
   --ifm-heading-color:#0C1831;
   --ifm-color-success-dark:#4C7BEF;
